--- a/source/NCX-Core-Lite/0.X/index.html
+++ b/source/NCX-Core-Lite/0.X/index.html
@@ -6,9 +6,9 @@ layout: default
 <h1>List of sources for NCX-Core-Lite v0</h1>
 <p>This directory contains the source code for all 0.X releases of NCX-Core-Lite</p>
 <p>Versions that the code compiles for are marked by [M] macOS, [L] Linux, and [W] Windows</p>
-<p><a href=/source/NCX-Core-Lite>&lt;- Back</a></p>
+<p><a href="javascript:window.history.back()">&lt;- Back</a></p>
 <hr>
-<h4>2021-03-06 - v0.1 - <a href=/source/NCX-Core-Lite/0.X/NCX-Core-Lite-v0.1.zip>NCX-Core-Lite-v0.1.zip</a> | Binaries [M] [L] (Never officially released, binaries unavailable)</h4>
-<hr>
-<h4>2021-03-22 - v0.2 - <a href=/source/NCX-Core-Lite/0.X/NCX-Core-Lite-v0.2.zip>NCX-Core-Lite-v0.2.zip</a> | Binaries [M] [L] (Never officially released, binaries unavailable)</h4>
-<hr>
+{% for item in site.data.ncxcorelitev0 %}
+  <h4>{{ item.date }} - v0.{{ item.name }} - <a href="/source/NCX-Core-Lite/0.X/NCX-Core-Lite-v0.{{ item.name }}-source.zip">NCX-Core-Lite-v0.{{ item.name }}-source.zip</a> | {% if item.bin == true %}<a href="/source/NCX-Core-Lite/0.X/NCX-Core-v0.{{ item.name }}-bin.zip">Binaries</a>{% else %}Binaries{% endif %} [{{ item.platform }}] {% if item.bin == true %}(Released as v0.{{ item.name }}){% else %}(Never officially released, binaries unavailable){% endif %}</h4>
+  <hr>
+{% endfor %}
