--- a/source/RNGTool/1.X/index.html
+++ b/source/RNGTool/1.X/index.html
@@ -7,21 +7,9 @@ layout: default
 <p>This directory contains the source code for all 1.X releases of RNGTool, starting with v1.4</p>
 <p>v1.0 is macOS 10.15+ only.</p>
 <p>v1.1+ is macOS 11.3+ only.</p>
-<p><a href=/source/RNGTool>&lt;- Back</a></p>
+<p><a href="javascript:window.history.back()">&lt;- Back</a></p>
 <hr>
-<h4>2021-08-27 - v1.0 (29) - <a href=/source/RNGTool/1.X/RNGTool-v1.0-installer.dmg>RNGTool-v1.0-installer.dmg</a> (Released as v1.0 build 29)</h4>
-<hr>
-<h4>2021-08-31 - v1.1 (48) - <a href=/source/RNGTool/1.X/RNGTool-v1.1-installer.dmg>RNGTool-v1.0-installer.dmg</a> (Released as v1.1 build 48)</h4>
-<hr>
-<h4>2021-08-31 - v1.1.1 (50) - <a href=/source/RNGTool/1.X/RNGTool-v1.1.1-installer.dmg>RNGTool-v1.1.1-installer.dmg</a> (Released as v1.1.1 build 50)</h4>
-<hr>
-<h4>2021-09-05 - v1.2 (56) - <a href=/source/RNGTool/1.X/RNGTool-v1.2-installer.dmg>RNGTool-v1.2-installer.dmg</a> (Released as v1.2 build 56)</h4>
-<hr>
-<h4>2021-09-05 - v1.3 (79) - <a href=/source/RNGTool/1.X/RNGTool-v1.3-installer.dmg>RNGTool-v1.3-installer.dmg</a> (Released as v1.3 build 79)</h4>
-<hr>
-<h4>2021-09-06 - v1.4 (86) - <a href=/source/RNGTool/1.X/RNGTool-v1.4-source.zip>RNGTool-v1.4-source.zip</a> | <a href=/source/RNGTool/1.X/RNGTool-v1.4-installer.dmg>Binaries</a> (Released as v1.4 build 86)</h4>
-<hr>
-<h4>2021-09-23 - v1.5 (106) - <a href=/source/RNGTool/1.X/RNGTool-v1.5-source.zip>RNGTool-v1.5-source.zip</a> | <a href=/source/RNGTool/1.X/RNGTool-v1.5-installer.dmg>Binaries</a> (Released as v1.5 build 106)</h4>
-<hr>
-<h4>2021-09-27 - v1.6 (142) - <a href=/source/RNGTool/1.X/RNGTool-v1.6-source.zip>RNGTool-v1.6-source.zip</a> | <a href=/source/RNGTool/1.X/RNGTool-v1.6-installer.dmg>Binaries</a> (Released as v1.6 build 142)</h4>
-<hr>
+{% for item in site.data.rngtool %}
+  <h4>{{ item.date }} - v1.{{ item.name }} ({{ item.build }}) - {% if item.src == true %}<a href="/source/RNGTool/1.X/RNGTool-v1.{{ item.name }}-source.zip">RNGTool-v1.{{ item.name }}-source.zip</a>{% else %}RNGTool-v1.{{ item.name }}-source.zip{% endif %} | <a href="/source/RNGTool/1.X/RNGTool-v1.{{ item.name }}-installer.dmg">Binaries</a> (Released as v1.{{ item.name }} build {{ item.build }})</h4>
+  <hr>
+{% endfor %}
